--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoginRegister.LoginActivity"></activity>
+        <activity android:name=".LoginRegister.LoginView"></activity>
     </application>
 
 </manifest>
