--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoginRegister.LoginView" />
+        <activity android:name=".UserComponents.LoginRegister.LoginViewRider" />
         <activity android:name=".WelcomeActivity.ActivityWelcome"></activity>
     </application>
 
