--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         <activity android:name=".UserComponents.LoginRegister.LoginViewRider" />
         <activity android:name=".WelcomeActivity.ActivityWelcome" />
         <activity android:name=".DriverComponents.LoginRegister.View.LoginViewDriver" />
-        <activity android:name=".RiderComponents.RiderRegister.RegisterView.RegisterViewRider"></activity>
+        <activity android:name=".RiderComponents.RiderRegister.RegisterView.RegisterViewRider" />
+        <activity android:name=".RiderComponents.SetupProfile.RiderProfileSetup"></activity>
     </application>
 
 </manifest>
