--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.whatsclone.muhammadfaizan.uberclone">
 
+    <!--
+         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
+         Google Maps Android API v2, but you must specify either coarse or fine
+         location permissions for the 'MyLocation' functionality. 
+    -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -20,7 +27,22 @@
         <activity android:name=".WelcomeActivity.ActivityWelcome" />
         <activity android:name=".DriverComponents.LoginRegister.View.LoginViewDriver" />
         <activity android:name=".RiderComponents.RiderRegister.RegisterView.RegisterViewRider" />
-        <activity android:name=".RiderComponents.SetupProfile.ProfileSetupView.RiderProfileSetup"></activity>
+        <activity android:name=".RiderComponents.SetupProfile.ProfileSetupView.RiderProfileSetup" />
+        <!--
+             The API key for Google Maps-based APIs is defined as a string resource.
+             (See the file "res/values/google_maps_api.xml").
+             Note that the API key is linked to the encryption key used to sign the APK.
+             You need a different API key for each encryption key, including the release key that is used to
+             sign the APK for publishing.
+             You can define the keys for the debug and release targets in src/debug/ and src/release/. 
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+
+        <activity
+            android:name=".RiderComponents.MainMapActivity.RIderMainMapActivity"
+            android:label="@string/title_activity_rider_main_map"></activity>
     </application>
 
 </manifest>
