--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         </activity>
         <activity android:name=".UserComponents.LoginRegister.LoginViewRider" />
         <activity android:name=".WelcomeActivity.ActivityWelcome" />
-        <activity android:name=".DriverComponents.LoginRegister.View.LoginViewDriver" />
+        <activity android:name=".DriverComponents.LoginRegister.View.DriverLogin.LoginView.LoginViewDriver" />
         <activity android:name=".RiderComponents.RiderRegister.RegisterView.RegisterViewRider" />
         <activity android:name=".RiderComponents.SetupProfile.ProfileSetupView.RiderProfileSetup" />
         <!--
